Changed: VertexBuffer data storing